--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,33 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.11.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.4</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.rarchives.ripme</groupId>
+            <artifactId>ripme</artifactId>
+            <version>1.7.13</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/resources/lib/ripme.jar</systemPath>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.jai-imageio</groupId>
+            <artifactId>jai-imageio-core</artifactId>
+            <version>1.3.1</version>
+        </dependency>
     </dependencies>
 
     <!-- 普通的maven打包方式 -->
