--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,9 +1,9 @@
 # db config
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://mysql:3306/tale?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
-spring.datasource.username=tale
-spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://39.96.164.206:3306/tale?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
+spring.datasource.username=root
+spring.datasource.password=!Root@0306
 spring.datasource.initialSize=20
 spring.datasource.minIdle=10
 spring.datasource.maxActive=100
