--- a/pom.xml
+++ b/pom.xml
@@ -195,11 +195,11 @@
         </dependency>
 
 
-        <dependency>
+       <!-- <dependency>
             <groupId>io.github.fengyouchao</groupId>
             <artifactId>sockslib</artifactId>
             <version>1.0.0-SNAPSHOT</version>
-        </dependency>
+        </dependency>-->
 
         <dependency>
             <groupId>com.google.apis</groupId>
