--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -3,7 +3,7 @@ spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://39.96.164.206:3306/tale?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
 spring.datasource.username=root
-spring.datasource.password=!Root@0306
+spring.datasource.password=aaaaa
 spring.datasource.initialSize=20
 spring.datasource.minIdle=10
 spring.datasource.maxActive=100
