--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -1,7 +1,7 @@
 # db config
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://remotemysql.com:3306/3nQGg3vD0h?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
+spring.datasource.url=jdbc:mysql://37.59.55.185:3306/3nQGg3vD0h?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
 spring.datasource.username=3nQGg3vD0h
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/tale?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
