--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -1,13 +1,13 @@
 # db config
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://37.59.55.185:3306/3nQGg3vD0h?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
-#spring.datasource.username=3nQGg3vD0h
-#spring.datasource.password=8oY6VXWWB3
+spring.datasource.url=jdbc:mysql://37.59.55.185:3306/3nQGg3vD0h?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
+spring.datasource.username=3nQGg3vD0h
+spring.datasource.password=8oY6VXWWB3
 
-spring.datasource.url=jdbc:mysql://85.10.205.173:3306/taleblog?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
-spring.datasource.username=taleblog
-spring.datasource.password=vOf3f3QGxM
+#spring.datasource.url=jdbc:mysql://b22a976ee2e214:a429141c@us-cdbr-iron-east-05.cleardb.net/heroku_7a4b025930d1177?reconnect=true
+#spring.datasource.username=b22a976ee2e214
+#spring.datasource.password=a429141c
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/tale?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
 #spring.datasource.username=root
