--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -1,13 +1,12 @@
 # db config
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://db4free.net:3306/taleblog?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
-spring.datasource.username=taleblog
-spring.datasource.password=vOf3f3QGxM
 
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/tale?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
 #spring.datasource.username=root
+#spring.datasource.username=root
+
 
 spring.datasource.initialSize=20
 spring.datasource.minIdle=10
